# sqlalchemy_multidb

./: .env  alembic.ini  main.py  pyproject.toml
migrations/: env.py
migrations/versions/: 2024.04.14_14:33_e99966214eb6_test.py
src/: config.py
src/apps/first/: models.py
src/apps/second/: models.py
src/db/: column_types.py  connection.py
